--- a/public_html/entidades/index.html
+++ b/public_html/entidades/index.html
@@ -79,7 +79,7 @@
                                             <ul class="nav nav-pills " id="pills-tab" role="tablist">
                                                 <li class="nav-item">
                                                   <a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">
-                                                      Legisladores
+                                                      Entidades
                                                   </a>
                                                 </li>
                                                 <li class="nav-item">
@@ -110,6 +110,16 @@
                                     <div class="card-body" id="div-entity" style="height: 100%; overflow-y: auto; width: 100%; 
                                          border-right: #3d3d3d solid 1px; border-top: #e9e9e9 solid 1px;">
 
+                                         <div style="width: 100%;">                                
+
+                                            <input onClick="this.select();" type="text" id="searchEntityList"
+                                                   class="align-self-center form-control small"
+                                                   placeholder="Buscar..."
+                                                   aria-label="Search" aria-describedby="basic-addon2"
+                                                   style="width: 98.6%; background-color: white;
+                                                          border-radius: 0px; border-left: none; border-right: none;"/>        
+                                        </div>
+
                                          <div class="tab-content" id="pills-tabContent">
                                             <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
                                                 <div class="p-2 d-flex flex-column" id="entity-list" style="height: auto; opacity:1"></div>
@@ -118,17 +128,6 @@
                                                 <div id="legend-area"></div>
                                             </div>
                                         </div>
-
-                                        <!--<div style="width: 100%;">                                
-
-                                            <input onClick="this.select();" type="text" id="searchEntityList"
-                                                   class="align-self-center form-control small"
-                                                   placeholder="Legisladores..."
-                                                   aria-label="Search" aria-describedby="basic-addon2"
-                                                   style="width: 98.6%; background-color: white;
-                                                          border-radius: 0px; border-left: none; border-right: none;"/>        
-                                        </div>-->
-                                        
                                         
                                     </div>
                                 </div>
