--- a/public_html/entidades/index.html
+++ b/public_html/entidades/index.html
@@ -534,6 +534,10 @@
 
         <script src="https://unpkg.com/d3-sankey@0"></script>
 
+        <script src="../shared/parliament/index.js"></script>
+
+        <script src="https://requirejs.org/docs/release/2.3.5/minified/require.js"></script>
+
         <!-- Custom Scripts-->
         <script src="js/options.js"></script>
         <script src="js/main.js"></script>
