--- a/public_html/entidades/index.html
+++ b/public_html/entidades/index.html
@@ -534,10 +534,12 @@
 
         <script src="https://unpkg.com/d3-sankey@0"></script>
 
+        <script src="../shared/parliament/saintleague.js"></script>
         <script src="../shared/parliament/index.js"></script>
 
-        <script src="https://requirejs.org/docs/release/2.3.5/minified/require.js"></script>
-
+        <!--<script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>-->
+        <script src="../shared/lodash/lodash.js"></script>
+        
         <!-- Custom Scripts-->
         <script src="js/options.js"></script>
         <script src="js/main.js"></script>
