--- a/public_html/entidades/index.html
+++ b/public_html/entidades/index.html
@@ -71,15 +71,15 @@
           <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
             <div class="bg-white py-2 collapse-inner rounded">
               <h6 class="collapse-header">Periodos:</h6>
-              <a class="collapse-item" href="">2017-2021</a>
-              <a class="collapse-item active" href="">2021-Presente</a>
+              <a class="collapse-item" >2017-2021</a>
+              <a class="collapse-item active" onclick="handleDataset('1')" >2021-Presente</a>
             </div>
           </div>
         </li>
   
         <!-- Nav Item - Dashboard -->
         <li class="nav-item">
-          <a class="nav-link" href="index.html">
+          <a class="nav-link" onclick="handleDataset('2')">
             <i class="fa fa-database" aria-hidden="true"></i>
             <span>Naciones Unidas</span></a>
         </li>
