--- a/public_html/entidades/index.html
+++ b/public_html/entidades/index.html
@@ -470,6 +470,16 @@
 
 
                             <div class="five" style="float: left; width: 70%; margin-top: 4px;">
+
+                                <div class="card" style="border: none;">
+                                    <div class="card-body d-flex flex-row">
+                                        <div id="pointTimeline" style="border: #3d3d3d solid 1px;" ></div>
+                                        <button type="button" class="btn btn-primary btn-sm">Primary</button>
+                                        <button type="button" class="btn btn-primary btn-sm">Secondary</button>
+                                    </div>
+                                    
+                                </div>
+
                                 <div class="card" style="border: none;">
                                     <div class="card-body">
                                         <div id="timelineVis" style="border: #3d3d3d solid 1px;" ondrop="drop2(event)" ondragover="allowDrop2(event)"></div>
