--- a/public_html/entidades/index.html
+++ b/public_html/entidades/index.html
@@ -51,7 +51,9 @@
     </head>
 
     <body id="page-top" class="sidebar-toggled">
-
+        <template id="selected-area">
+            
+        </template>
         <!-- Page Wrapper -->
         <!--<div id="wrapper">-->
 
@@ -480,6 +482,7 @@
                                     <div class="card" style="border: none; width: 100%;">
                                         <div class="card-body">
                                             <div id="pointTimeline" style="border: #3d3d3d solid 1px;" ></div>
+                                            <div id="canvas" style="height: 70px; border: 1px solid rgba(98, 155, 255, 0.85);"></div>
                                         </div>
                                     </div>
                                     
@@ -607,6 +610,7 @@
         <script src="js/components/buscadores/busquedaSes.js"></script>
         <script src="js/components/listas/main.js"></script>
         <script src="js/components/otros/legends.js"></script>
+        <script src="js/classes/selectArea.js"></script>
         <script src="../data/partidosinfo.js"></script>
     </body>
 
