--- a/public_html/entidades/index.html
+++ b/public_html/entidades/index.html
@@ -481,8 +481,12 @@
                                 <div class="d-flex flex-row">
                                     <div class="card" style="border: none; width: 100%;">
                                         <div class="card-body">
-                                            <div id="pointTimeline" style="border: #3d3d3d solid 1px;" ></div>
-                                            <div id="canvas" style="height: 70px; border: 1px solid rgba(98, 155, 255, 0.85);"></div>
+                                            
+                                            <div id="canvas"  class="d-flex flex-column" style="height: 100px; border: 1px solid rgba(98, 155, 255, 0.85);">
+                                                <div class="p-2" ></div>
+                                                <div id="pointTimeline" style="border: #3d3d3d solid 1px;" ></div>
+                                                <div class="p-2"></div>
+                                            </div>
                                         </div>
                                     </div>
                                     
