--- a/public_html/entidades/index.html
+++ b/public_html/entidades/index.html
@@ -584,6 +584,7 @@
         <!--<script src="https://unpkg.com/event-drops@1.2.0/dist/index.js"></script>-->
 
         <script src="https://visjs.github.io/vis-timeline/standalone/umd/vis-timeline-graph2d.min.js"></script>
+        <!--<script src="../shared/vis-timeline/vis-timeline-graph2d.min.js"></script>-->
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-legend/2.25.6/d3-legend.js"></script>
 
