--- a/public_html/entidades/index.html
+++ b/public_html/entidades/index.html
@@ -495,7 +495,8 @@
 
                                 <div class="card" style="border: none;">
                                     <div class="card-body">
-                                        <div id="timelineVis" style="border: #3d3d3d solid 1px;" ondrop="drop2(event)" ondragover="allowDrop2(event)"></div>
+                                        <!--ondrop="drop2(event)" ondragover="allowDrop2(event)"-->
+                                        <div id="timelineVis" style="border: #3d3d3d solid 1px;" ></div>
                                     </div>
                                     <div>
                                         <button id="btn-remove-all" type="button" class="btn btn-outline-light btn-sm" 
@@ -616,6 +617,7 @@
         <script src="js/components/listas/main.js"></script>
         <script src="js/components/otros/legends.js"></script>
         <script src="js/classes/selectArea.js"></script>
+        <script src="js/classes/timeline.js"></script>
         <script src="../data/partidosinfo.js"></script>
     </body>
 
