nuevas clases en select area

--- a/public_html/entidades/index.html
+++ b/public_html/entidades/index.html
@@ -52,7 +52,6 @@
 
     <body id="page-top" class="sidebar-toggled">
         <template id="selected-area">
-            
         </template>
         <!-- Page Wrapper -->
         <!--<div id="wrapper">-->
@@ -482,10 +481,11 @@
                                     <div class="card" style="border: none; width: 100%;">
                                         <div class="card-body">
                                             
-                                            <div id="canvas"  class="d-flex flex-column" style="height: 100px; border: 1px solid rgba(98, 155, 255, 0.85);">
-                                                <div class="p-2" ></div>
+                                            <div id="canvas"  class="d-flex flex-column" style="/*height: 100px;*/ border: 1px solid rgba(98, 155, 255, 0.85);">
+                                                <div class="p-2"></div>
                                                 <div id="pointTimeline" style="border: #3d3d3d solid 1px;" ></div>
                                                 <div class="p-2"></div>
+                                                <!--<div class="p-2"></div>-->
                                             </div>
                                         </div>
                                     </div>
@@ -616,7 +616,7 @@
         <script src="js/components/buscadores/busquedaSes.js"></script>
         <script src="js/components/listas/main.js"></script>
         <script src="js/components/otros/legends.js"></script>
-        <script src="js/classes/selectArea.js"></script>
+        <script src="js/classes/selectArea2.js"></script>
         <script src="js/classes/timeline.js"></script>
         <script src="../data/partidosinfo.js"></script>
     </body>
