anadir dias y total de votaciones al hacer brush

--- a/public_html/entidades/index.html
+++ b/public_html/entidades/index.html
@@ -511,7 +511,7 @@
                                        ><i class="far fa-trash-alt"></i></button>
                                     </div>
 
-                                    <div id="canvas"  class="d-flex flex-column" style="/*height: 100px;*/ border: 1px solid rgba(98, 155, 255, 0.85);">
+                                    <div id="canvas"  class="d-flex flex-column" style="/*height: 100px;*/ border: 1px solid rgba(98, 155, 255, 0.85); position: relative;">
                                                 
                                         <div id="pointTimeline" style="border: #3d3d3d solid 1px;" ></div>
                                         
