Nuevo timeline con D3

--- a/public_html/entidades/index.html
+++ b/public_html/entidades/index.html
@@ -481,7 +481,7 @@
                             </div>
 
 
-                            <div class="five" style="float: left; width: 70%; margin-top: 4px;">
+                            <div id="five" class="five" style="float: left; width: 70%; margin-top: 4px;">
 
                                 <div class="d-flex flex-row">
                                     <div class="card" style="border: none; width: 100%;">
@@ -630,12 +630,12 @@
         <script src="js/components/layouts/cvn.js"></script>
         <script src="js/components/slider/main.js"></script>
         <script src="js/components/timeline/timelinevis.js"></script>
-        <script src="js/components/timeline/timelineShort.js"></script>
+        <script src="js/components/timeline/timelineShort2.js"></script>
         <script src="js/components/buscadores/busqueda.js"></script>
         <script src="js/components/buscadores/busquedaSes.js"></script>
         <script src="js/components/listas/main.js"></script>
         <script src="js/components/otros/legends.js"></script>
-        <script src="js/classes/selectArea2.js"></script>
+        <script src="js/classes/selectArea3.js"></script>
         <script src="js/classes/timeline.js"></script>
         <script src="../data/partidosinfo.js"></script>
     </body>
