d3 tl con zoom en el cti

--- a/public_html/entidades/index.html
+++ b/public_html/entidades/index.html
@@ -524,7 +524,7 @@
                                 <div class="fecha-rango" style="
                                                 position: relative;
                                                 left: 10px; 
-                                                top: 30px;
+                                                top: 370px;
                                                 width: 90%;
                                             ">
                                        <!--
@@ -544,7 +544,7 @@
                                        --> 
                                     <div class="input-daterange input-group" id="datepicker">
                                         <input  id="datepicker1" type="text" class="input-sm form-control" name="start" />
-                                        <span class="input-group-addon">to</span>
+                                        <span class="input-group-addon p-2">a</span>
                                         <input  id="datepicker2" type="text" class="input-sm form-control" name="end" />
                                     </div>
 
@@ -621,7 +621,6 @@
         
         <!-- Custom Scripts-->
         <script src="js/options.js"></script>
-        <script src="js/main.js"></script>
         <script src="js/components/layouts/d3-context-menu.js"></script>
         <script src="js/components/layouts/zoomMenu.js"></script>
         <script src="js/components/layouts/clusters.js"></script>
@@ -630,13 +629,14 @@
         <script src="js/components/layouts/cvn.js"></script>
         <script src="js/components/slider/main.js"></script>
         <script src="js/components/timeline/timelinevis.js"></script>
-        <script src="js/components/timeline/timelineShort2.js"></script>
+        <script src="js/components/timeline/tlshort.js"></script>
         <script src="js/components/buscadores/busqueda.js"></script>
         <script src="js/components/buscadores/busquedaSes.js"></script>
         <script src="js/components/listas/main.js"></script>
         <script src="js/components/otros/legends.js"></script>
         <script src="js/classes/selectArea3.js"></script>
         <script src="js/classes/timeline.js"></script>
+        <script src="js/main.js"></script>
         <script src="../data/partidosinfo.js"></script>
     </body>
 
