--- a/public_html/entidades/index.html
+++ b/public_html/entidades/index.html
@@ -676,6 +676,7 @@
         <script src="js/components/layouts/curules.js"></script>
         <script src="js/components/layouts/main.js"></script>
         <script src="js/components/layouts/cvn.js"></script>
+        <script src="js/components/layouts/parallelSet.js"></script>
         <script src="js/components/slider/main.js"></script>
         <script src="js/components/timeline/timelinevis.js"></script>
         <script src="js/components/timeline/tlshort.js"></script>
